--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ kube = { version = "3.0", features = ["runtime", "derive"] }
 k8s-openapi = { version = "0.27", features = ["latest"] }
 clap = { version = "4.5", features = ["derive"] }
 libc = "0.2"
+nix = { version = "0.31", features = ["fs"] }
 mimalloc = "0.1"
 pyo3 = { version = "0.27", features = ["extension-module"] }
 pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
