--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,8 @@ pyo3 = { version = "0.27", features = ["extension-module"] }
 pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
 pyo3-bytes = "0.5"
 tonic-build = "0.12"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
 
 [profile.release]
 opt-level = 3
