--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [workspace]
 members = [
     "proto",
+    "metrics",
     "client",
     "server",
     "py",
 ]
 default-members = [
     "proto",
+    "metrics",
     "client",
     "server",
 ]
@@ -41,7 +43,12 @@ pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
 pyo3-bytes = "0.5"
 tonic-build = "0.12"
 serde = { version = "1.0", features = ["derive"] }
-bincode = "1.3"
+serde_json = "1.0"
+opentelemetry = { version = "0.27", default-features = false }
+opentelemetry_sdk = { version = "0.27", default-features = false, features = ["rt-tokio", "metrics"] }
+opentelemetry-otlp = { version = "0.27", default-features = false, features = ["metrics", "grpc-tonic"] }
+tower = "0.5"
+http = "1.0"
 
 [profile.release]
 opt-level = 3
