--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,8 +5,12 @@ edition = "2024"
 
 [dependencies]
 frontcache-proto = { path = "../proto" }
+frontcache-metrics = { path = "../metrics" }
 tonic = { workspace = true }
 anyhow = { workspace = true }
 bytes = { workspace = true }
 dashmap = { workspace = true }
 futures = { workspace = true }
+opentelemetry = { workspace = true }
+opentelemetry_sdk = { workspace = true }
+tower = { workspace = true }
