--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 frontcache-proto = { path = "../proto" }
+frontcache-metrics = { path = "../metrics" }
 tokio = { workspace = true }
 tokio-stream = { workspace = true }
 tonic = { workspace = true }
@@ -27,4 +28,5 @@ clap = { workspace = true }
 nix = { workspace = true }
 mimalloc = { workspace = true }
 serde = { workspace = true }
-bincode = { workspace = true }
+serde_json = { workspace = true }
+opentelemetry = { workspace = true }
