--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,24 +18,16 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Protoc
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y protobuf-compiler libprotobuf-dev --no-install-recommends
-        sudo apt-get clean
-        sudo rm -rf /var/lib/apt/lists/*
-        protoc --version
+      uses: arduino/setup-protoc@v3
+      with:
+        version: "33.x"
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Setup Rust Cache
       uses: Swatinem/rust-cache@v2
 
     - name: Setup Just
       uses: extractions/setup-just@v2
-
-    - name: Install cargo-outdated
-      run: cargo install cargo-outdated --locked
-
-    - name: Install cargo-audit
-      run: cargo install cargo-audit --locked
 
     - name: Run just check
       run: just check
