--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,6 +2,7 @@ name: Check
 
 permissions:
   contents: read
+  packages: write
 
 on:
   push:
@@ -13,10 +14,14 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   check:
     runs-on: ubuntu-latest
+    outputs:
+      short_sha: ${{ steps.vars.outputs.short_sha }}
     steps:
     - uses: actions/checkout@v4
 
@@ -43,3 +48,127 @@ jobs:
           git diff
           exit 1
         fi
+
+    - name: Generate short SHA
+      id: vars
+      run: echo "short_sha=$(echo ${{ github.sha }} | cut -c1-6)" >> $GITHUB_OUTPUT
+
+  build-amd64:
+    runs-on: ubuntu-latest
+    needs: check
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
+      with:
+        version: "33.x"
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Setup Rust Cache
+      uses: Swatinem/rust-cache@v2
+      with:
+        key: amd64
+
+    - name: Build AMD64 binary
+      run: cargo build --release -p frontcache-server
+
+    - name: Copy binary
+      run: cp target/release/frontcache-server .
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push AMD64 image
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        platforms: linux/amd64
+        push: true
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main-${{ needs.check.outputs.short_sha }}-amd64
+        cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache-amd64
+        cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache-amd64,mode=max
+
+  build-arm64:
+    runs-on: ubuntu-24.04-arm64
+    needs: check
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
+      with:
+        version: "33.x"
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Setup Rust Cache
+      uses: Swatinem/rust-cache@v2
+      with:
+        key: arm64
+
+    - name: Build ARM64 binary
+      run: cargo build --release -p frontcache-server
+
+    - name: Copy binary
+      run: cp target/release/frontcache-server .
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push ARM64 image
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        platforms: linux/arm64
+        push: true
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main-${{ needs.check.outputs.short_sha }}-arm64
+        cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache-arm64
+        cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache-arm64,mode=max
+
+  create-manifest:
+    runs-on: ubuntu-latest
+    needs: [check, build-amd64, build-arm64]
+    steps:
+    - name: Log in to Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Create and push manifest
+      env:
+        SHORT_SHA: ${{ needs.check.outputs.short_sha }}
+      run: |
+        docker buildx imagetools create -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main-${SHORT_SHA} \
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main-${SHORT_SHA}-amd64 \
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main-${SHORT_SHA}-arm64
+
+  prune-images:
+    runs-on: ubuntu-latest
+    needs: create-manifest
+    permissions:
+      packages: write
+    steps:
+    - name: Delete old package versions
+      uses: actions/delete-package-versions@v5
+      with:
+        package-name: frontcache
+        package-type: container
+        min-versions-to-keep: 10
