--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -98,7 +98,7 @@ jobs:
         cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache-amd64,mode=max
 
   build-arm64:
-    runs-on: ubuntu-24.04-arm64
+    runs-on: ubuntu-latest
     needs: check
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
@@ -110,16 +110,24 @@ jobs:
         version: "33.x"
         repo-token: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Install cross-compilation tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gcc-aarch64-linux-gnu
+        rustup target add aarch64-unknown-linux-gnu
+
     - name: Setup Rust Cache
       uses: Swatinem/rust-cache@v2
       with:
         key: arm64
 
     - name: Build ARM64 binary
-      run: cargo build --release -p frontcache-server
+      env:
+        CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
+      run: cargo build --release -p frontcache-server --target aarch64-unknown-linux-gnu
 
     - name: Copy binary
-      run: cp target/release/frontcache-server .
+      run: cp target/aarch64-unknown-linux-gnu/release/frontcache-server .
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
