Fix bug where we lose tracking of block by overwriting path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ parking_lot = "0.12"
 memmap2 = "0.9"
 redb = "3.1"
 uuid = { version = "1.11", features = ["v4"] }
+short-uuid = "0.2"
 thiserror = "2.0"
 object_store = { version = "0.13", features = ["aws", "gcp"] }
 kube = { version = "3.0", features = ["runtime", "derive"] }
