--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -183,3 +183,10 @@ jobs:
         package-name: frontcache
         package-type: container
         min-versions-to-keep: 10
+
+    - name: Delete untagged package versions
+      uses: actions/delete-package-versions@v5
+      with:
+        package-name: frontcache
+        package-type: container
+        delete-only-untagged-versions: true
