Fix service name and use jemalloc

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -26,7 +26,7 @@ kube = { workspace = true }
 k8s-openapi = { workspace = true }
 clap = { workspace = true }
 nix = { workspace = true }
-mimalloc = { workspace = true }
+tikv-jemallocator = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 opentelemetry = { workspace = true }
