--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ k8s-openapi = { version = "0.27", features = ["latest"] }
 clap = { version = "4.5", features = ["derive"] }
 libc = "0.2"
 nix = { version = "0.31", features = ["fs"] }
-mimalloc = "0.1"
+tikv-jemallocator = "0.6"
 pyo3 = { version = "0.27", features = ["extension-module"] }
 pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
 pyo3-bytes = "0.5"
