--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
-channel = "stable"
-components = ["rustfmt", "clippy"]
+channel = "1.93.1"
+components = ["rustfmt", "clippy", "rust-analyzer"]
